newsum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsum-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: newsum-app
