newsum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsum-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: test.newsum.click
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: newsum-service
              port:
                number: 80
